Updated documentation, cleaned code, added ant build
Signed-off-by: Sharad Singhal <sharad.singhal1@gmail.com>